# gobs/api/pricer.pb.go
@@ -113,8 +113,9 @@ func (m *PriceRequest) GetRate() float64 {
 }
 
 type PriceResponse struct {
-	Price                float64  `protobuf:"fixed64,2,opt,name=price,proto3" json:"price,omitempty"`
-	Greeks               []*Greek `protobuf:"bytes,3,rep,name=greeks,proto3" json:"greeks,omitempty"`
+	Value                float64  `protobuf:"fixed64,1,opt,name=value,proto3" json:"value,omitempty"`
+	ValueType            string   `protobuf:"bytes,2,opt,name=value_type,json=valueType,proto3" json:"value_type,omitempty"`
+	Error                string   `protobuf:"bytes,3,opt,name=error,proto3" json:"error,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -145,69 +146,21 @@ func (m *PriceResponse) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_PriceResponse proto.InternalMessageInfo
 
-func (m *PriceResponse) GetPrice() float64 {
-	if m != nil {
-		return m.Price
-	}
-	return 0
-}
-
-func (m *PriceResponse) GetGreeks() []*Greek {
-	if m != nil {
-		return m.Greeks
-	}
-	return nil
-}
-
-type Greek struct {
-	Label                string   `protobuf:"bytes,1,opt,name=label,proto3" json:"label,omitempty"`
-	Value                float64  `protobuf:"fixed64,2,opt,name=value,proto3" json:"value,omitempty"`
-	Error                string   `protobuf:"bytes,3,opt,name=error,proto3" json:"error,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *Greek) Reset()         { *m = Greek{} }
-func (m *Greek) String() string { return proto.CompactTextString(m) }
-func (*Greek) ProtoMessage()    {}
-func (*Greek) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fec020e99f204f1f, []int{2}
-}
-
-func (m *Greek) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_Greek.Unmarshal(m, b)
-}
-func (m *Greek) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_Greek.Marshal(b, m, deterministic)
-}
-func (m *Greek) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_Greek.Merge(m, src)
-}
-func (m *Greek) XXX_Size() int {
-	return xxx_messageInfo_Greek.Size(m)
-}
-func (m *Greek) XXX_DiscardUnknown() {
-	xxx_messageInfo_Greek.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_Greek proto.InternalMessageInfo
-
-func (m *Greek) GetLabel() string {
-	if m != nil {
-		return m.Label
-	}
-	return ""
-}
-
-func (m *Greek) GetValue() float64 {
+func (m *PriceResponse) GetValue() float64 {
 	if m != nil {
 		return m.Value
 	}
 	return 0
 }
 
-func (m *Greek) GetError() string {
+func (m *PriceResponse) GetValueType() string {
+	if m != nil {
+		return m.ValueType
+	}
+	return ""
+}
+
+func (m *PriceResponse) GetError() string {
 	if m != nil {
 		return m.Error
 	}
@@ -217,35 +170,32 @@ func (m *Greek) GetError() string {
 func init() {
 	proto.RegisterType((*PriceRequest)(nil), "gooption.gobs.PriceRequest")
 	proto.RegisterType((*PriceResponse)(nil), "gooption.gobs.PriceResponse")
-	proto.RegisterType((*Greek)(nil), "gooption.gobs.Greek")
 }
 
 func init() { proto.RegisterFile("pricer.proto", fileDescriptor_fec020e99f204f1f) }
 
 var fileDescriptor_fec020e99f204f1f = []byte{
-	// 347 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x91, 0x41, 0x4e, 0xf3, 0x30,
-	0x10, 0x85, 0x95, 0xa6, 0x49, 0xff, 0xba, 0xad, 0x7e, 0x6a, 0x55, 0x28, 0x94, 0x2e, 0xa2, 0xac,
-	0x2a, 0x84, 0x52, 0xa9, 0xec, 0x60, 0x07, 0x0b, 0xc4, 0x0e, 0xa5, 0x62, 0xc3, 0xa6, 0x72, 0x8a,
-	0x89, 0xac, 0x5a, 0x19, 0x63, 0x3b, 0x15, 0x6c, 0xb9, 0x02, 0x67, 0xe1, 0x24, 0x5c, 0x81, 0x83,
-	0xa0, 0xb1, 0x23, 0x54, 0x10, 0xbb, 0x79, 0xdf, 0x3c, 0xdb, 0x6f, 0xc6, 0x64, 0xa8, 0xb4, 0xd8,
-	0x70, 0x9d, 0x2b, 0x0d, 0x16, 0xe8, 0xa8, 0x02, 0x50, 0x56, 0x40, 0x9d, 0x57, 0x50, 0x9a, 0xe9,
-	0xac, 0x02, 0xa8, 0x24, 0x5f, 0x30, 0x25, 0x16, 0xac, 0xae, 0xc1, 0x32, 0xec, 0x19, 0x6f, 0xce,
-	0xde, 0x03, 0x32, 0xbc, 0xc5, 0xd3, 0x05, 0x7f, 0x6a, 0xb8, 0xb1, 0x34, 0x25, 0x03, 0xbc, 0x4d,
-	0xd4, 0xd5, 0x03, 0xb3, 0x3c, 0x09, 0xd2, 0x60, 0x1e, 0x14, 0xfb, 0x88, 0x1e, 0x92, 0xd8, 0x58,
-	0x2d, 0xb6, 0x3c, 0xe9, 0xb8, 0x66, 0xab, 0x90, 0xf3, 0x67, 0x25, 0xf4, 0x4b, 0x12, 0x7a, 0xee,
-	0x15, 0x3d, 0x22, 0xff, 0x54, 0x63, 0xd7, 0x1b, 0x26, 0x65, 0xd2, 0x4d, 0x83, 0x79, 0xbf, 0xe8,
-	0xa9, 0xc6, 0x5e, 0x31, 0x29, 0x29, 0x25, 0x5d, 0xa3, 0xc0, 0x26, 0x91, 0x3b, 0xe0, 0x6a, 0x7a,
-	0x40, 0xc2, 0x1d, 0xc8, 0x24, 0x76, 0x08, 0x4b, 0x74, 0x69, 0xcc, 0xd2, 0xf3, 0x2e, 0xac, 0xb3,
-	0x15, 0x19, 0xb5, 0xb1, 0x8d, 0x82, 0xda, 0x70, 0x3a, 0x21, 0x91, 0xdb, 0x42, 0x1b, 0xca, 0x0b,
-	0x7a, 0x4a, 0xe2, 0x4a, 0x73, 0xbe, 0x35, 0x49, 0x98, 0x86, 0xf3, 0xc1, 0x72, 0x92, 0xff, 0x58,
-	0x4e, 0x7e, 0x8d, 0xcd, 0xa2, 0xf5, 0x64, 0x37, 0x24, 0x72, 0x00, 0x2f, 0x93, 0xac, 0xe4, 0xd2,
-	0x8d, 0xdf, 0x2f, 0xbc, 0x40, 0xba, 0x63, 0xb2, 0xf9, 0x7e, 0xc2, 0x09, 0xa4, 0x5c, 0x6b, 0xd0,
-	0x6e, 0xea, 0x7e, 0xe1, 0xc5, 0xf2, 0xb1, 0xcd, 0xa7, 0x57, 0x5c, 0xef, 0x30, 0xc9, 0x1d, 0x89,
-	0x1c, 0xa0, 0xc7, 0xbf, 0x22, 0xec, 0x6f, 0x7f, 0x3a, 0xfb, 0xbb, 0xe9, 0x67, 0xcc, 0xc6, 0xaf,
-	0x1f, 0x9f, 0x6f, 0x9d, 0x41, 0x16, 0x2f, 0xdc, 0x74, 0xe7, 0xc1, 0xc9, 0xe5, 0xf8, 0xfe, 0x3f,
-	0x1a, 0xf1, 0x77, 0x2f, 0x98, 0x12, 0x6b, 0x55, 0x96, 0xb1, 0xfb, 0xd9, 0xb3, 0xaf, 0x00, 0x00,
-	0x00, 0xff, 0xff, 0x48, 0x87, 0xda, 0x72, 0x16, 0x02, 0x00, 0x00,
+	// 320 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x51, 0xcb, 0x4a, 0x03, 0x31,
+	0x14, 0x25, 0x7d, 0x4c, 0x9d, 0xb4, 0x45, 0x1b, 0x44, 0x62, 0xad, 0x50, 0x66, 0x55, 0x5c, 0x4c,
+	0x45, 0x77, 0xba, 0xd3, 0x1f, 0x90, 0xd1, 0x8d, 0xdd, 0x94, 0xb4, 0x86, 0x21, 0x1a, 0xe6, 0x5e,
+	0x93, 0x4c, 0xb1, 0x5b, 0x7f, 0xc1, 0x6f, 0xf1, 0x4b, 0xfc, 0x05, 0x3f, 0x44, 0x92, 0x8c, 0x50,
+	0xc1, 0xdd, 0x39, 0xe7, 0x9e, 0x7b, 0x39, 0xdc, 0x43, 0x07, 0x68, 0xd4, 0x5a, 0x9a, 0x1c, 0x0d,
+	0x38, 0x60, 0xc3, 0x12, 0x00, 0x9d, 0x82, 0x2a, 0x2f, 0x61, 0x65, 0xc7, 0x93, 0x12, 0xa0, 0xd4,
+	0x72, 0x2e, 0x50, 0xcd, 0x45, 0x55, 0x81, 0x13, 0x7e, 0x66, 0xa3, 0x39, 0xfb, 0x24, 0x74, 0x70,
+	0xe7, 0xb7, 0x0b, 0xf9, 0x5a, 0x4b, 0xeb, 0xd8, 0x94, 0xf6, 0xfd, 0x35, 0x55, 0x95, 0x4f, 0xc2,
+	0x49, 0x4e, 0xa6, 0x64, 0x46, 0x8a, 0x5d, 0x89, 0x1d, 0xd1, 0xc4, 0x3a, 0xa3, 0x5e, 0x24, 0x6f,
+	0x85, 0x61, 0xc3, 0xbc, 0x2e, 0xdf, 0x50, 0x99, 0x2d, 0x6f, 0x47, 0x3d, 0x32, 0x76, 0x4c, 0xf7,
+	0xb0, 0x76, 0xcb, 0xb5, 0xd0, 0x9a, 0x77, 0xa6, 0x64, 0x96, 0x16, 0x3d, 0xac, 0xdd, 0xad, 0xd0,
+	0x9a, 0x31, 0xda, 0xb1, 0x08, 0x8e, 0x77, 0xc3, 0x42, 0xc0, 0xec, 0x80, 0xb6, 0x37, 0xa0, 0x79,
+	0x12, 0x24, 0x0f, 0xbd, 0xcb, 0xf8, 0x2c, 0xbd, 0xe8, 0xf2, 0x38, 0x5b, 0xd0, 0x61, 0x13, 0xdb,
+	0x22, 0x54, 0x56, 0xb2, 0x43, 0xda, 0xdd, 0x08, 0x5d, 0xff, 0x26, 0x8e, 0x84, 0x9d, 0x52, 0x1a,
+	0xc0, 0xd2, 0x6d, 0x31, 0xe6, 0x4d, 0x8b, 0x34, 0x28, 0x0f, 0x5b, 0x0c, 0x4b, 0xd2, 0x18, 0x30,
+	0x21, 0x71, 0x5a, 0x44, 0x72, 0xf1, 0xdc, 0xdc, 0x36, 0xf7, 0xd2, 0x6c, 0xd4, 0x5a, 0xb2, 0x47,
+	0xda, 0x0d, 0x02, 0x3b, 0xc9, 0xff, 0xfc, 0x36, 0xdf, 0xfd, 0xdc, 0x78, 0xf2, 0xff, 0x30, 0xe6,
+	0xcb, 0x46, 0xef, 0x5f, 0xdf, 0x1f, 0xad, 0x7e, 0x96, 0xcc, 0x43, 0x59, 0x57, 0xe4, 0x6c, 0x46,
+	0xce, 0xc9, 0xcd, 0x68, 0xb1, 0xef, 0xcd, 0xbe, 0x9d, 0x6b, 0x81, 0x6a, 0x89, 0xab, 0x55, 0x12,
+	0x9a, 0xb9, 0xfc, 0x09, 0x00, 0x00, 0xff, 0xff, 0xa1, 0xa8, 0xb4, 0xea, 0xd6, 0x01, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -260,7 +210,7 @@ const _ = grpc.SupportPackageIsVersion6
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type PricerServiceClient interface {
-	Price(ctx context.Context, in *PriceRequest, opts ...grpc.CallOption) (*PriceResponse, error)
+	Price(ctx context.Context, opts ...grpc.CallOption) (PricerService_PriceClient, error)
 }
 
 type pricerServiceClient struct {
@@ -271,59 +221,91 @@ func NewPricerServiceClient(cc grpc.ClientConnInterface) PricerServiceClient {
 	return &pricerServiceClient{cc}
 }
 
-func (c *pricerServiceClient) Price(ctx context.Context, in *PriceRequest, opts ...grpc.CallOption) (*PriceResponse, error) {
-	out := new(PriceResponse)
-	err := c.cc.Invoke(ctx, "/gooption.gobs.PricerService/Price", in, out, opts...)
+func (c *pricerServiceClient) Price(ctx context.Context, opts ...grpc.CallOption) (PricerService_PriceClient, error) {
+	stream, err := c.cc.NewStream(ctx, &_PricerService_serviceDesc.Streams[0], "/gooption.gobs.PricerService/Price", opts...)
 	if err != nil {
 		return nil, err
 	}
-	return out, nil
+	x := &pricerServicePriceClient{stream}
+	return x, nil
+}
+
+type PricerService_PriceClient interface {
+	Send(*PriceRequest) error
+	Recv() (*PriceResponse, error)
+	grpc.ClientStream
+}
+
+type pricerServicePriceClient struct {
+	grpc.ClientStream
+}
+
+func (x *pricerServicePriceClient) Send(m *PriceRequest) error {
+	return x.ClientStream.SendMsg(m)
+}
+
+func (x *pricerServicePriceClient) Recv() (*PriceResponse, error) {
+	m := new(PriceResponse)
+	if err := x.ClientStream.RecvMsg(m); err != nil {
+		return nil, err
+	}
+	return m, nil
 }
 
 // PricerServiceServer is the server API for PricerService service.
 type PricerServiceServer interface {
-	Price(context.Context, *PriceRequest) (*PriceResponse, error)
+	Price(PricerService_PriceServer) error
 }
 
 // UnimplementedPricerServiceServer can be embedded to have forward compatible implementations.
 type UnimplementedPricerServiceServer struct {
 }
 
-func (*UnimplementedPricerServiceServer) Price(ctx context.Context, req *PriceRequest) (*PriceResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method Price not implemented")
+func (*UnimplementedPricerServiceServer) Price(srv PricerService_PriceServer) error {
+	return status.Errorf(codes.Unimplemented, "method Price not implemented")
 }
 
 func RegisterPricerServiceServer(s *grpc.Server, srv PricerServiceServer) {
 	s.RegisterService(&_PricerService_serviceDesc, srv)
 }
 
-func _PricerService_Price_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(PriceRequest)
-	if err := dec(in); err != nil {
+func _PricerService_Price_Handler(srv interface{}, stream grpc.ServerStream) error {
+	return srv.(PricerServiceServer).Price(&pricerServicePriceServer{stream})
+}
+
+type PricerService_PriceServer interface {
+	Send(*PriceResponse) error
+	Recv() (*PriceRequest, error)
+	grpc.ServerStream
+}
+
+type pricerServicePriceServer struct {
+	grpc.ServerStream
+}
+
+func (x *pricerServicePriceServer) Send(m *PriceResponse) error {
+	return x.ServerStream.SendMsg(m)
+}
+
+func (x *pricerServicePriceServer) Recv() (*PriceRequest, error) {
+	m := new(PriceRequest)
+	if err := x.ServerStream.RecvMsg(m); err != nil {
 		return nil, err
 	}
-	if interceptor == nil {
-		return srv.(PricerServiceServer).Price(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/gooption.gobs.PricerService/Price",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(PricerServiceServer).Price(ctx, req.(*PriceRequest))
-	}
-	return interceptor(ctx, in, info, handler)
+	return m, nil
 }
 
 var _PricerService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "gooption.gobs.PricerService",
 	HandlerType: (*PricerServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
+	Methods:     []grpc.MethodDesc{},
+	Streams: []grpc.StreamDesc{
 		{
-			MethodName: "Price",
-			Handler:    _PricerService_Price_Handler,
+			StreamName:    "Price",
+			Handler:       _PricerService_Price_Handler,
+			ServerStreams: true,
+			ClientStreams: true,
 		},
 	},
-	Streams:  []grpc.StreamDesc{},
 	Metadata: "pricer.proto",
 }
